# title-tracker

./: .gitignore  Makefile  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/src/: main.py
backend/src/alembic/versions/: 2026_02_03_0951-8fc1aed22167_init_models.py  2026_02_05_1237-0ea6261a4de0_add_titles.py  2026_02_05_1327-2e3fde7ebd45_add_external_id_to_titles.py  2026_02_05_1335-ed3a0fb4af93_change_score_to_float.py  2026_02_05_1349-0c4fbe9bb879_add_genres_and_review.py  2026_02_08_1314-7de87312cfab_add_finished_at.py  2026_02_12_0949-beea689a909e_add_is_spoiler_to_user_titles.py  2026_02_20_1722-17df441d6f0d_add_notifications_table.py  2026_02_20_1938-ed2c395fd60a_make_notification_user_title_id_nullable.py  2026_02_25_0935-04bbf33bc74e_add_title_screenshots.py  (+2 more)
backend/src/auth/: controller.py  jwt.py  schemas.py  service.py
backend/src/backup/: controller.py  schemas.py
backend/src/core/: config.py  content.py  igdb_service.py  s3.py  security.py  shikimori_service.py  tmdb_service.py
backend/src/games/: controller.py  schemas.py
backend/src/notifications/: controller.py  schemas.py
backend/src/screenshots/: controller.py  schemas.py
backend/src/scripts/: create_users.py  sync_genres.py
backend/src/search/: controller.py
backend/src/titles/: controller.py  schemas.py
backend/src/user_titles/: controller.py  schemas.py
backend/src/users/: __init__.py  controller.py  schemas.py
frontend/: Dockerfile  (+4 more)
(+77 files in other folders)
